// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewDashboardPage should render minimal 1`] = `
<Component
  location={Object {}}
  route={Object {}}
>
  <NewDashboardPage
    executingViewHooks={Array []}
    loadingViewHooks={Array []}
    location={Object {}}
    route={Object {}}
  >
    <Spinner
      text="Loading..."
    >
      <span>
        <i
          className="fa fa-spin fa-spinner"
        />
         
        Loading...
      </span>
    </Spinner>
  </NewDashboardPage>
</Component>
`;

exports[`NewDashboardPage should render transform search view to dashboard view 1`] = `
<Component
  location={
    Object {
      "state": Object {
        "view": Object {
          "created_at": 2019-10-16T14:38:44.681Z,
          "description": undefined,
          "id": undefined,
          "owner": undefined,
          "properties": undefined,
          "search_id": undefined,
          "state": undefined,
          "summary": undefined,
          "title": undefined,
          "type": "SEARCH",
        },
      },
    }
  }
  route={Object {}}
>
  <NewDashboardPage
    executingViewHooks={Array []}
    loadingViewHooks={Array []}
    location={
      Object {
        "state": Object {
          "view": Object {
            "created_at": 2019-10-16T14:38:44.681Z,
            "description": undefined,
            "id": undefined,
            "owner": undefined,
            "properties": undefined,
            "search_id": undefined,
            "state": undefined,
            "summary": undefined,
            "title": undefined,
            "type": "SEARCH",
          },
        },
      }
    }
    route={Object {}}
  >
    <Spinner
      text="Loading..."
    >
      <span>
        <i
          className="fa fa-spin fa-spinner"
        />
         
        Loading...
      </span>
    </Spinner>
  </NewDashboardPage>
</Component>
`;
